# praxis-mlops

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
auth/: auth_manager.py
config/: praxis_config.yaml
lib/: imports.py
