[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praxis-mlops"
version = "0.1.0"
description = "A utility library for MLOps with virtual environment management and integrated logging."
authors = [
    { name = "Build Club", email = "info@buildclub.com.au" }
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["mlops", "mlflow", "wandb", "logging", "environment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
urls = {
    "Homepage": "https://github.com/build-club/praxis-mlops"
}

[project.scripts]
praxis-mlops = "praxis_mlops.cli:main"

[project.dependencies]
numpy = "*"
pandas = "*"
requests = "*"
python-dotenv = "*"
PyYAML = "*"

[project.optional-dependencies]
setuptools = "*"
wheel = "*"

[project.python-requires]
python = ">=3.9"
